--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,5 +34,5 @@ repos:
       language: python
       language_version: python3
       types: [python]
-      exclude: ^(scico/test/|examples|docs)
+      exclude: ^(trinidi/test/|examples|docs)
       args: ['--score=n', '--disable=all', '--enable=missing-docstring']
