--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,12 @@
 include MANIFEST.in
-include README.rst
+include README.md
 include LICENSE
 include setup.py
-include conftest.py
 include pyproject.toml
 include requirements.txt
 include docs/docs_requirements.txt
 
 recursive-include trinidi *.py
-recursive-include trinidi/data *.npy
+recursive-include data *.npy README.rst
 recursive-include docs Makefile *.py *.ipynb *.rst *.bib *.css *.svg *.ico
 recursive-include scripts *_requirements.txt *.txt *.rst *.py
