--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,6 @@ include pyproject.toml
 include requirements.txt
 include docs/docs_requirements.txt
 
-recursive-include trinidi *.py
-recursive-include data *.npy README.rst
+recursive-include trinidi *.py *.npy
 recursive-include docs Makefile *.py *.ipynb *.rst *.bib *.css *.svg *.ico
 recursive-include examples *_requirements.txt *.txt *.rst *.py
